@@ -27,8 +27,6 @@
 
 #include <libxml/tree.h>
 
-#include <unistd.h>
-
 G_BEGIN_DECLS
 
 #define AGS_TYPE_FILE                (ags_file_get_type())
